<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_welcome"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:textColor="@color/primary_color"
        android:text="@string/welcome"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_LBL_enter_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="128dp"
        android:layout_marginTop="32dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:textColor="@color/primary_color"
        android:text="@string/enter_email"
        android:layout_below="@+id/welcome_LBL_welcome"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/welcome_EDT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_LBL_enter_email"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:minHeight="48dp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/welcome_MTV_signUp"
        android:text="Log In" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_MTV_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Don't have user? Click here!"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/blue"
        >

    </com.google.android.material.textview.MaterialTextView>





</RelativeLayout>